tests/expectations/compiler/multibyte/multibyte_fail.out
Error [EPAR0370005]: expected an identifier, '(', '[', 'address, 'bool', 'field', 'group', 'scalar', 'signature', a string, 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128', 'future' -- found '='
    --> compiler-test:30:30
     |
  30 |                    let swap: = arr[j];
     |                              ^
